# poe-proxy-mcp

./: Dockerfile  POE_API_GAPS_ANALYSIS.md  Procfile  README.md  README.old.md  WARP.md  deployment_guide.md  enhanced_poe_server.py  file_utils.py  install.sh  install_enhanced_poe.py  poe-proxy-mcp.service  poe_client_v2.py  poe_server.py  poe_server_openai.py  poe_server_phase2.py  poe_server_v2.py  pyproject.toml  railway.json  railway.toml  requirements.txt  run_sse_server.py  run_sse_server_v2.py  run_tests.py  sdk_analysis.md  setup.py  warp_agent_tools.py  warp_context_handler.py
doc/: build_notes.md
docs/: OPENAI_IMPLEMENTATION.md
examples/: configure_mcp_settings.py  configure_mcp_settings_v2.py  file_attachment.py  simple_query.py  test_claude_compatibility.py
poe_client/: __init__.py  file_utils.py  openai_client.py  poe_api.py  rate_limiter.py  session.py  streaming.py
tests/: test_openai_client.py
utils/: __init__.py  config.py
